--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 jingle-jam-tracker/node_modules/*
 .env
-wrangler.toml
 .wrangler
 node_modules
 .dev.vars
-jinglejamcouk
-package-lock.json
+package-lock.jsons
 package.json
