--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -55,6 +55,6 @@ FUNDRAISER_SLUG="jingle-jam-2022"
 FUNDRAISER_PUBLIC_ID="50f4c6e9-3879-4dbf-bbbe-5f804bbb82d6"
 YOGSCAST_CAMPAIGN_SLUG="jingle-jam-2022"
 YOGSCAST_USERNAME_SLUG="yogscast"
-ENABLE_REFRESH=false
+ENABLE_REFRESH=true
 ENABLE_DEBUG=false
 
