--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -23,8 +23,18 @@ jobs:
         working-directory: ./workers/tiltify-cache
         run: npm install
 
-      - name: Publish to Development
+      - name: Publish Worker to Development
         run: npm run deploy:development
+        working-directory: ./workers/tiltify-cache
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+
+      - name: Publish KV to Development
+        run: 
+          npm run kv-causes:development
+          npm run kv-conversion-rate:development
+          npm run kv-summary:development
+          npm run kv-trends-previous:development
         working-directory: ./workers/tiltify-cache
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
