--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -28,3 +28,13 @@ jobs:
         working-directory: ./workers/tiltify-cache
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+
+      - name: Publish KV to Production
+        run: 
+          npm run kv-causes:production
+          npm run kv-conversion-rate:production
+          npm run kv-summary:production
+          npm run kv-trends-previous:production
+        working-directory: ./workers/tiltify-cache
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
