Fix deployment script

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -30,7 +30,7 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
       - name: Publish KV to Production
-        run: 
+        run: |
           npm run kv-causes:production
           npm run kv-conversion-rate:production
           npm run kv-summary:production
