--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -30,7 +30,7 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
       - name: Publish KV to Development
-        run: 
+        run: |
           npm run kv-causes:development
           npm run kv-conversion-rate:development
           npm run kv-summary:development
