--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,28 +2,28 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug Website",
+            "name": "Run Cache Service",
             "type": "f5anything",
             "request": "launch",
-            "command": "wrangler pages dev ./website --kv=JINGLE_JAM_DATA=6a08d74af525475baefa19a93f0ba136 --do TILTIFY_CACHE=TiltifyData@tiltify-cache --do GRAPH_DATA=GraphData@tiltify-cache",
-            "terminalName": "Website",
-            "terminalIndex": 1,
+            "command": "cd ${workspaceFolder}/workers/tiltify-cache/ ; npm run dev",
+            "terminalName": "cache",
+            "terminalIndex": 2,
             "showTerminal": true
         },
         {
-            "name": "Debug API",
+            "name": "Run Website & API",
             "type": "f5anything",
             "request": "launch",
-            "command": "cd ${workspaceFolder}/workers/tiltify-cache/ ; wrangler dev --name tiltify-cache",
-            "terminalName": "API",
-            "terminalIndex": 2,
+            "command": "npm run dev",
+            "terminalName": "Website",
+            "terminalIndex": 1,
             "showTerminal": true
         },
         {
             "name": "Add Local KV's",
             "type": "f5anything",
             "request": "launch",
-            "command": "wrangler kv:bulk put ${workspaceFolder}/workers/tiltify-cache/kv_setup.json --namespace-id=6a08d74af525475baefa19a93f0ba136 --preview --local ; cd ${workspaceFolder}/workers/tiltify-cache/ ; wrangler kv:bulk put ./kv_setup.json --namespace-id=6a08d74af525475baefa19a93f0ba136 --preview --local",
+            "command": "cd ${workspaceFolder}/workers/tiltify-cache/ ; npm run kv-causes:local ; npm run kv-conversion-rate:local ; npm run kv-summary:local ; npm run kv-trends-previous:local",
             "terminalName": "Other",
             "terminalIndex": 0,
             "showTerminal": true
