Fix branch for deploy script

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -46,5 +46,5 @@ jobs:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           projectName: jingle-jam-tracker
           directory: website
-          branch: master
+          branch: main
           wranglerVersion: '3'
