Change Development Site to use 2023 Data

--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -24,7 +24,7 @@ YEAR=2023
 COLLECTIONS_AVAILABLE=100000
 DOLLAR_OFFSET=3371741.16
 DONATION_DIFFERENCE=0
-CONVERSION_RATE=1.265
+CONVERSION_RATE=1.264
 CAUSE_SLUG="jingle-jam"
 FUNDRAISER_SLUG="jingle-jam-2023"
 FUNDRAISER_PUBLIC_ID="8601c634-c8a4-4a90-ac64-da037c683b46"
@@ -50,13 +50,13 @@ compatibility_flags = ["durable_object_alarms"]
 [env.development.vars]
 YEAR=2023
 COLLECTIONS_AVAILABLE=100000
-DOLLAR_OFFSET=36023.96
-DONATION_DIFFERENCE=6787
-CONVERSION_RATE=1.265
+DOLLAR_OFFSET=3371741.16
+DONATION_DIFFERENCE=0
+CONVERSION_RATE=1.264
 CAUSE_SLUG="jingle-jam"
-FUNDRAISER_SLUG="jingle-jam-2022"
-FUNDRAISER_PUBLIC_ID="50f4c6e9-3879-4dbf-bbbe-5f804bbb82d6"
-YOGSCAST_CAMPAIGN_SLUG="jingle-jam-2022"
+FUNDRAISER_SLUG="jingle-jam-2023"
+FUNDRAISER_PUBLIC_ID="8601c634-c8a4-4a90-ac64-da037c683b46"
+YOGSCAST_CAMPAIGN_SLUG="jingle-jam-2023"
 YOGSCAST_USERNAME_SLUG="yogscast"
 REFRESH_TIME=60
 ENABLE_REFRESH=true
