--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
             "name": "Add Local KV's",
             "type": "f5anything",
             "request": "launch",
-            "command": "cd ${workspaceFolder}/workers/tiltify-cache/ ; npm run kv-causes:local ; npm run kv-conversion-rate:local ; npm run kv-summary:local ; npm run kv-trends-previous:local",
+            "command": "cd ${workspaceFolder}/workers/tiltify-cache/ ; npm run kv-causes:local ; npm run kv-summary:local ; npm run kv-trends-previous:local",
             "terminalName": "Other",
             "terminalIndex": 0,
             "showTerminal": true
