Disable Graph Refresh

--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -32,6 +32,7 @@ YOGSCAST_CAMPAIGN_SLUG="jingle-jam-2023"
 YOGSCAST_USERNAME_SLUG="yogscast"
 REFRESH_TIME=10
 ENABLE_REFRESH=true
+ENABLE_GRAPH_REFRESH=false
 ENABLE_DEBUG=false
 
 
@@ -60,5 +61,6 @@ YOGSCAST_CAMPAIGN_SLUG="jingle-jam-2023"
 YOGSCAST_USERNAME_SLUG="yogscast"
 REFRESH_TIME=60
 ENABLE_REFRESH=true
+ENABLE_GRAPH_REFRESH=false
 ENABLE_DEBUG=false
 
