Disable API Update

--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -31,7 +31,7 @@ FUNDRAISER_PUBLIC_ID="8601c634-c8a4-4a90-ac64-da037c683b46"
 YOGSCAST_CAMPAIGN_SLUG="jingle-jam-2023"
 YOGSCAST_USERNAME_SLUG="yogscast"
 REFRESH_TIME=10
-ENABLE_REFRESH=true
+ENABLE_REFRESH=false
 ENABLE_GRAPH_REFRESH=false
 ENABLE_DEBUG=false
 
@@ -60,7 +60,7 @@ FUNDRAISER_PUBLIC_ID="8601c634-c8a4-4a90-ac64-da037c683b46"
 YOGSCAST_CAMPAIGN_SLUG="jingle-jam-2023"
 YOGSCAST_USERNAME_SLUG="yogscast"
 REFRESH_TIME=60
-ENABLE_REFRESH=true
+ENABLE_REFRESH=false
 ENABLE_GRAPH_REFRESH=false
 ENABLE_DEBUG=false
 
