--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -1,16 +1,11 @@
 name = "tiltify-cache"
-main = "dist/index.js"
+main = "./src/index.ts"
 account_id = "b5ef135c0a2feed17e7ba1c44698c5f4"
 compatibility_date = "2024-09-02"
 workers_dev = true
 kv_namespaces = [
   { binding = "JINGLE_JAM_DATA", id = "9d285e05684c4887acb7731de7a41a4e", preview_id = "6a08d74af525475baefa19a93f0ba136" }
 ]
-
-[build]
-  command = "npm run build"
-  cwd = "."
-  watch_dir = "src"
 
 [durable_objects]
 bindings = [{name = "TILTIFY_DATA", class_name = "TiltifyData"}, {name = "GRAPH_DATA", class_name = "GraphData"}]
