--- a/wrangler.toml
+++ b/wrangler.toml
@@ -17,12 +17,12 @@ kv_namespaces = [
 
 
     
-[env.development]
+[env.preview]
     kv_namespaces = [
         { binding = "JINGLE_JAM_DATA", id = "c9634f49deeb4618b3c3f1980f777f7a", preview_id = "6a08d74af525475baefa19a93f0ba136" }
     ]
 
-[env.development.durable_objects]
+[env.preview.durable_objects]
     bindings = [
         { name = "TILTIFY_DATA", class_name = "TiltifyData", script_name = "tiltify-cache-development" }, 
         { name = "GRAPH_DATA", class_name = "GraphData", script_name = "tiltify-cache-development" }
