--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -61,7 +61,7 @@ FUNDRAISER_SLUG="jingle-jam-2023"
 FUNDRAISER_PUBLIC_ID="8601c634-c8a4-4a90-ac64-da037c683b46"
 YOGSCAST_CAMPAIGN_SLUG="jingle-jam-2023"
 YOGSCAST_USERNAME_SLUG="yogscast"
-REFRESH_TIME=10
-ENABLE_REFRESH=false
+REFRESH_TIME=600
+ENABLE_REFRESH=true
 ENABLE_GRAPH_REFRESH=false
 ENABLE_DEBUG=false
