--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -37,9 +37,10 @@ FUNDRAISER_PUBLIC_ID = "1c690c40-a2f6-48b3-9a88-5a8cb69d4734"
 YOGSCAST_CAMPAIGN_SLUG = "jingle-jam-2024"
 YOGSCAST_USERNAME_SLUG = "yogscast"
 DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2024"
-REFRESH_TIME = 10
-ENABLE_REFRESH = false
-ENABLE_GRAPH_REFRESH = false
+LIVE_REFRESH_TIME = 10
+ENABLE_REFRESH = true
+GRAPH_REFRESH_TIME = 600
+ENABLE_GRAPH_REFRESH = true
 ENABLE_DEBUG = false
 
 
@@ -66,7 +67,8 @@ FUNDRAISER_PUBLIC_ID = "8601c634-c8a4-4a90-ac64-da037c683b46"
 YOGSCAST_CAMPAIGN_SLUG = "jingle-jam-2023"
 YOGSCAST_USERNAME_SLUG = "yogscast"
 DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2023"
-REFRESH_TIME = 600
+LIVE_REFRESH_TIME = 10
 ENABLE_REFRESH = true
-ENABLE_GRAPH_REFRESH = false
+GRAPH_REFRESH_TIME = 600
+ENABLE_GRAPH_REFRESH = true
 ENABLE_DEBUG = false
