--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -39,11 +39,12 @@ jobs:
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
-      - name: Publish KV to Production
+      - name: Publish KV's to Development
         run: |
-          npm run kv-causes:production
-          npm run kv-summary:production
-          npm run kv-trends-previous:production
-        working-directory: ./workers/tiltify-cache
+          cd ./workers/tiltify-cache
+          npm run kv-causes:development
+          npm run kv-summary:development
+          cd -
+          npm run kv-trends-previous:development
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
