--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "private": true,
     "scripts": {
         "dev": "wrangler pages dev",
-        "kv-trends-previous:production": "wrangler kv:key put trends-previous --path=kv/trends-previous.json --namespace-id=9d285e05684c4887acb7731de7a41a4e",
-        "kv-trends-previous:development": "wrangler kv:key put trends-previous --path=kv/trends-previous.json --namespace-id=c9634f49deeb4618b3c3f1980f777f7a",
-        "kv-trends-previous:local": "wrangler kv:key put trends-previous --path=kv/trends-previous.json --namespace-id=6a08d74af525475baefa19a93f0ba136 --preview --local"
+        "kv-trends-previous:production": "wrangler kv key put trends-previous --path=kv/trends-previous.json --namespace-id=9d285e05684c4887acb7731de7a41a4e",
+        "kv-trends-previous:development": "wrangler kv key put trends-previous --path=kv/trends-previous.json --namespace-id=c9634f49deeb4618b3c3f1980f777f7a",
+        "kv-trends-previous:local": "wrangler kv key put trends-previous --path=kv/trends-previous.json --namespace-id=6a08d74af525475baefa19a93f0ba136 --preview --local"
     },
     "devDependencies": {
         "@cloudflare/workers-types": "^4.20240925.0",
