--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -38,9 +38,9 @@ YOGSCAST_CAMPAIGN_SLUG = "jingle-jam-2024"
 YOGSCAST_USERNAME_SLUG = "yogscast"
 DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2024"
 LIVE_REFRESH_TIME = 10
-ENABLE_REFRESH = true
+ENABLE_REFRESH = false
 GRAPH_REFRESH_TIME = 600
-ENABLE_GRAPH_REFRESH = true
+ENABLE_GRAPH_REFRESH = false
 ENABLE_DEBUG = false
 
 
@@ -68,7 +68,7 @@ YOGSCAST_CAMPAIGN_SLUG = "jingle-jam-2024"
 YOGSCAST_USERNAME_SLUG = "yogscast"
 DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2024"
 LIVE_REFRESH_TIME = 10
-ENABLE_REFRESH = true
+ENABLE_REFRESH = false
 GRAPH_REFRESH_TIME = 600
-ENABLE_GRAPH_REFRESH = true
+ENABLE_GRAPH_REFRESH = false
 ENABLE_DEBUG = false
