Update README for 2025, add migration script for historical data, and adjust API cache settings

--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -38,7 +38,7 @@ YOGSCAST_CAMPAIGN_SLUG = "jingle-jam-2025"
 YOGSCAST_USERNAME_SLUG = "yogscast"
 DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2025"
 LIVE_REFRESH_TIME = 10
-ENABLE_REFRESH = true
+ENABLE_REFRESH = false
 GRAPH_REFRESH_TIME = 600
 ENABLE_GRAPH_REFRESH = false
 ENABLE_DEBUG = false
@@ -56,17 +56,17 @@ bindings = [
 ]
 
 [env.development.vars]
-YEAR = 2024
+YEAR = 2025
 COLLECTIONS_AVAILABLE = 100000
 DOLLAR_OFFSET = 5747814.82
 DONATION_DIFFERENCE = 300
 CONVERSION_RATE = 1.33
 CAUSE_SLUG = "jingle-jam"
-FUNDRAISER_SLUG = "jingle-jam-2024"
+FUNDRAISER_SLUG = "jingle-jam-2025"
 FUNDRAISER_PUBLIC_ID = "1c690c40-a2f6-48b3-9a88-5a8cb69d4734"
-YOGSCAST_CAMPAIGN_SLUG = "jingle-jam-2024"
+YOGSCAST_CAMPAIGN_SLUG = "jingle-jam-2025"
 YOGSCAST_USERNAME_SLUG = "yogscast"
-DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2024"
+DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2025"
 LIVE_REFRESH_TIME = 10
 ENABLE_REFRESH = false
 GRAPH_REFRESH_TIME = 600
