--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -28,17 +28,15 @@ new_classes = ["GraphData"]
 [vars]
 YEAR = 2025
 COLLECTIONS_AVAILABLE = 100000
-DOLLAR_OFFSET = 5747814.82
+DOLLAR_OFFSET = 8215739.75
 DONATION_DIFFERENCE = 0
 CONVERSION_RATE = 1.33
 CAUSE_SLUG = "jingle-jam"
-FUNDRAISER_SLUG = "jingle-jam-2025"
-FUNDRAISER_PUBLIC_ID = "1c690c40-a2f6-48b3-9a88-5a8cb69d4734"
-YOGSCAST_CAMPAIGN_SLUG = "jingle-jam-2025"
-YOGSCAST_USERNAME_SLUG = "yogscast"
+FUNDRAISER_PUBLIC_ID = "8bd643d3-07ae-4aab-bc2e-5179064bfebf"
+YOGSCAST_USERNAME = "yogscast"
 DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2025"
 LIVE_REFRESH_TIME = 10
-ENABLE_REFRESH = false
+ENABLE_REFRESH = true
 GRAPH_REFRESH_TIME = 600
 ENABLE_GRAPH_REFRESH = false
 ENABLE_DEBUG = false
@@ -56,16 +54,14 @@ bindings = [
 ]
 
 [env.development.vars]
-YEAR = 2025
+YEAR = 2024
 COLLECTIONS_AVAILABLE = 100000
 DOLLAR_OFFSET = 5747814.82
 DONATION_DIFFERENCE = 300
 CONVERSION_RATE = 1.33
 CAUSE_SLUG = "jingle-jam"
-FUNDRAISER_SLUG = "jingle-jam-2025"
 FUNDRAISER_PUBLIC_ID = "1c690c40-a2f6-48b3-9a88-5a8cb69d4734"
-YOGSCAST_CAMPAIGN_SLUG = "jingle-jam-2025"
-YOGSCAST_USERNAME_SLUG = "yogscast"
+YOGSCAST_USERNAME = "yogscast"
 DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2025"
 LIVE_REFRESH_TIME = 10
 ENABLE_REFRESH = false
