--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -30,7 +30,7 @@ YEAR = 2025
 COLLECTIONS_AVAILABLE = 100000
 DOLLAR_OFFSET = 8215739.75
 DONATION_DIFFERENCE = 0
-CONVERSION_RATE = 1.33
+CONVERSION_RATE = 1.32
 CAUSE_SLUG = "jingle-jam"
 FUNDRAISER_PUBLIC_ID = "8bd643d3-07ae-4aab-bc2e-5179064bfebf"
 YOGSCAST_USERNAME = "yogscast"
@@ -54,17 +54,17 @@ bindings = [
 ]
 
 [env.development.vars]
-YEAR = 2024
+YEAR = 2025
 COLLECTIONS_AVAILABLE = 100000
-DOLLAR_OFFSET = 5747814.82
-DONATION_DIFFERENCE = 300
-CONVERSION_RATE = 1.33
+DOLLAR_OFFSET = 8215739.75
+DONATION_DIFFERENCE = 0
+CONVERSION_RATE = 1.32
 CAUSE_SLUG = "jingle-jam"
-FUNDRAISER_PUBLIC_ID = "1c690c40-a2f6-48b3-9a88-5a8cb69d4734"
+FUNDRAISER_PUBLIC_ID = "8bd643d3-07ae-4aab-bc2e-5179064bfebf"
 YOGSCAST_USERNAME = "yogscast"
 DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2025"
 LIVE_REFRESH_TIME = 10
-ENABLE_REFRESH = false
+ENABLE_REFRESH = true
 GRAPH_REFRESH_TIME = 600
 ENABLE_GRAPH_REFRESH = false
 ENABLE_DEBUG = false
