Enable the graph

--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -38,7 +38,7 @@ DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2025"
 LIVE_REFRESH_TIME = 10
 ENABLE_REFRESH = true
 GRAPH_REFRESH_TIME = 600
-ENABLE_GRAPH_REFRESH = false
+ENABLE_GRAPH_REFRESH = true
 ENABLE_DEBUG = false
 
 
@@ -66,5 +66,5 @@ DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2025"
 LIVE_REFRESH_TIME = 10
 ENABLE_REFRESH = true
 GRAPH_REFRESH_TIME = 600
-ENABLE_GRAPH_REFRESH = false
+ENABLE_GRAPH_REFRESH = true
 ENABLE_DEBUG = false
