--- a/workers/tiltify-cache/wrangler.toml
+++ b/workers/tiltify-cache/wrangler.toml
@@ -36,9 +36,9 @@ FUNDRAISER_PUBLIC_ID = "8bd643d3-07ae-4aab-bc2e-5179064bfebf"
 YOGSCAST_USERNAME = "yogscast"
 DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2025"
 LIVE_REFRESH_TIME = 10
-ENABLE_REFRESH = true
+ENABLE_REFRESH = false
 GRAPH_REFRESH_TIME = 600
-ENABLE_GRAPH_REFRESH = true
+ENABLE_GRAPH_REFRESH = false
 ENABLE_DEBUG = false
 
 
@@ -64,7 +64,7 @@ FUNDRAISER_PUBLIC_ID = "8bd643d3-07ae-4aab-bc2e-5179064bfebf"
 YOGSCAST_USERNAME = "yogscast"
 DURABLE_OBJECT_CACHE_KEY = "tiltify-data-2025"
 LIVE_REFRESH_TIME = 10
-ENABLE_REFRESH = true
+ENABLE_REFRESH = false
 GRAPH_REFRESH_TIME = 600
-ENABLE_GRAPH_REFRESH = true
+ENABLE_GRAPH_REFRESH = false
 ENABLE_DEBUG = false
